[package]
name = "srcpd"
version = "1.5.0"
homepage = "www.siggsoftware.ch"
edition = "2021"
authors = ["Daniel Sigg <daniel@siggsoftware.ch>"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.27.1"
configparser = "3.0.0"
log = "0.4.0"
env_logger = "0.10.0"
spidev = "0.6.0"
#gpio = "0.4.1"
gpio-cdev = "0.6.0"
signal-hook = "0.3.15"
splitty = "1.0.1"
fork = "0.1.22"
chrono = "0.4.31"
lazy_static = "1.4.0"
